[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch9"
version = "0.1.0"
description = "Unified monorepo for all torch/* domain libraries"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "torch9 Contributors"}
]
keywords = ["pytorch", "deep-learning", "machine-learning", "audio", "vision", "nlp", "rl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
audio = [
    "torchaudio>=2.0.0",
    "soundfile>=0.12.0",
]
vision = [
    "torchvision>=0.15.0",
    "pillow>=9.0.0",
]
text = [
    "torchtext>=0.15.0",
    "spacy>=3.0.0",
]
rl = [
    "gymnasium>=0.28.0",
]
rec = []
tune = []
data = []
codec = []
all = [
    "torch9[audio]",
    "torch9[vision]",
    "torch9[text]",
    "torch9[rl]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/9cog/torch9"
Repository = "https://github.com/9cog/torch9"
Documentation = "https://github.com/9cog/torch9#readme"

[tool.setuptools.packages.find]
where = ["packages"]
include = ["torch9*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=torch9 --cov-report=term-missing"
